--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -4,6 +4,7 @@ html {
   font: 112.5%/1.45em georgia, serif, sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
+  background-color: #f3f4f6;
 }
 body {
   margin: 0;
